--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "NODE_ENV=test jest"
+    "test":  "cross-env NODE_ENV=test jest"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "cross-env": "^10.0.0",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
