--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Starter project for CSE 340",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test":  "cross-env NODE_ENV=test jest"
+    "start": "node start.js",
+    "dev": "nodemon start.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "author": "",
   "license": "ISC",
