--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
   },
   "devDependencies": {
     "cross-env": "^10.0.0",
+    "cypress": "^14.5.4",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
+  },
+  "jest": {
+    "testTimeout": 10000
   }
 }
